@@ -349,6 +349,7 @@ def jcc(args):
     build = False
     install = False
     recompile = False
+    egg_info = False
     output = 'build'
     debug = False
     excludes = []
@@ -372,7 +373,9 @@ def jcc(args):
     arch = []
     resources = []
     imports = {}
-
+    extra_setup_args = []
+    initvm_args = {}
+    
     i = 1
     while i < len(args):
         arg = args[i]
@@ -398,6 +401,9 @@ def jcc(args):
             elif arg == '--vmarg':
                 i += 1
                 vmargs.append(args[i])
+            elif arg == '--maxheap':
+                i += 1
+                initvm_args['maxheap'] = args[i]
             elif arg == '--python':
                 from python import python, module
                 i += 1
@@ -414,6 +420,12 @@ def jcc(args):
             elif arg == '--compile':
                 from python import compile
                 recompile = True
+            elif arg == '--egg-info':
+                from python import compile
+                egg_info = True
+            elif arg == '--extra-setup-arg':
+                i += 1
+                extra_setup_args.append(args[i])
             elif arg == '--output':
                 i += 1
                 output = args[i]
@@ -492,8 +504,10 @@ def jcc(args):
     if libpath:
         vmargs.append('-Djava.library.path=' + os.pathsep.join(libpath))
 
-    env = initVM(os.pathsep.join(classpath) or None,
-                 maxstack='512k', vmargs=' '.join(vmargs))
+    initvm_args['maxstack'] = '512k'
+    initvm_args['vmargs'] = ' '.join(vmargs)
+
+    env = initVM(os.pathsep.join(classpath) or None, **initvm_args)
 
     typeset = set()
     excludes = set(excludes)
@@ -504,7 +518,7 @@ def jcc(args):
         else:
             raise ValueError, "--shared must be used when using --import"
 
-    if recompile or not build and (install or dist):
+    if recompile or not build and (install or dist or egg_info):
         if moduleName is None:
             raise ValueError, 'module name not specified (use --python)'
         else:
@@ -512,7 +526,8 @@ def jcc(args):
                     install, dist, debug, jars, version,
                     prefix, root, install_dir, home_dir, use_distutils,
                     shared, compiler, modules, wininst, find_jvm_dll,
-                    arch, generics, resources, imports)
+                    arch, generics, resources, imports, egg_info,
+                    extra_setup_args)
     else:
         if imports:
             def walk((include, importset), dirname, names):
@@ -647,12 +662,13 @@ def jcc(args):
             module(out, allInOne, done, imports, cppdir, moduleName,
                    shared, generics)
             out.close()
-            if build or install or dist:
+            if build or install or dist or egg_info:
                 compile(env, os.path.dirname(args[0]), output, moduleName,
                         install, dist, debug, jars, version,
                         prefix, root, install_dir, home_dir, use_distutils,
                         shared, compiler, modules, wininst, find_jvm_dll,
-                        arch, generics, resources, imports)
+                        arch, generics, resources, imports, egg_info,
+                        extra_setup_args)
 
 
 def header(env, out, cls, typeset, packages, excludes, generics, _dll_export):
